--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
 = Subscribem
 
-This project rocks and uses MIT-LICENSE.
+Implements Ryan Bigg's subscribem gem from "Multitenancy with Rails", Leanpub, version 2013-10-27.
+
+©2012 - 2013 Ryan Bigg
